--- a/client/index.html
+++ b/client/index.html
@@ -7,47 +7,40 @@
   <body>
     <!-- Scripts may be placed anywhere on a page. But FYI, they block rendering of elements
      below them until after the scripts load-->
+    <div id='playerDiv'>
+    </div>
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/backbone/backbone.js"></script>
-
     <script src='env/config.js'></script>
-
     <script src="data/data.js"></script>
-
     <script src="models/SongModel.js"></script>
     <script src="collections/Songs.js"></script>
     <script src="collections/SongQueue.js"></script>
     <script src="models/AppModel.js"></script>
-
     <script src="views/PlayerView.js"></script>
     <script src="views/LibraryView.js"></script>
     <script src="views/LibraryEntryView.js"></script>
     <script src="views/SongQueueView.js"></script>
     <script src="views/SongQueueEntryView.js"></script>
     <script src="views/AppView.js"></script>
-
     <script>
       $(function() {
         // set up model objects
         var library = new Songs();
-        library.url = 'https://api.parse.com/1/classes/songs/';
-        // library.fetch();
         var data;
-        library.fetch().done(function() {
-          var app = new AppModel({library: library});
-          
-
-          // build a view for the top level of the whole app
-          var appView = new AppView({model: app});
-          
-          // put the view onto the screen
-          $('body').append(appView.render());
-          $('#player').on('ended', function() {
-              //do whatever we need to do for ending and getting next from queue
-            app.nextSong();
-          });
-
+        library.fetch({
+          success: function(library) {
+            var app = new AppModel({library: library});
+            // build a view for the top level of the whole app
+            var appView = new AppView({model: app});
+            // put the view onto the screen
+            $('#playerDiv').append(appView.render());
+            $('#player').on('ended', function() {
+                //do whatever we need to do for ending and getting next from queue
+              app.nextSong();
+            });
+          }
         });
       });
     </script>  
